# cmpr

./: LICENSE  cmpr  go.mod  main.go
tests/: CMakeLists.txt
